# ai-pbr-models

./: .gitignore  CMakeCache.txt  README.md  create_pbr.py  create_pbr.spec  export_weights.py  matsynth_category_mapping.json  matsynth_name_index_map.json  matsynth_samples_check.json  matsynth_stratified_splits.json  plan.md  plan_v3.md  plan_v4.md  requirements.txt  requirements_pyinstaller.txt  skyrim_dataset_info.txt  skyrim_segformer_dataset_info.txt  trace_models.py
cpp_gui/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp_gui/src/: main.cpp
hooks/: hook-importlib_metadata.py  hook-kornia.py  hook-torch.py  hook-tqdm.py  hook-transformers-deps.py  hook-transformers.py
matsynth_hygiene/: append_new_textures.py  calculate_new_categories.py  calculate_new_indexes.py  compute_poisson_coarse.py  create_stratified_splits.py  map_names_to_indexes.py  matsynth_check_dataset.py  matsynth_extract_basecolor_by_categories.py  matsynth_final_indexes.json  matsynth_index_check.py  matsynth_prepare_dataset.py  matsynth_produce_ao_and_diffuse.py  matsynth_save_images_from_categories.py  prepare_matsynth_dataset.py  save_matsynth_textures_from_dataset.py  skyrim_create_splits.py  skyrim_prepare_dataset.py
stored_weights/a1/unet_albedo/: best_model.pt  best_model_stats.json
stored_weights/a2/unet_albedo/: best_model.pt  best_model_stats.json
stored_weights/a3/unet_albedo/: best_model.pt  best_model_stats.json
stored_weights/a4/unet_albedo/: best_model.pt  best_model_stats.json
stored_weights/m0/unet_parallax/: best_model_stats.json
stored_weights/m1/unet_ao/: best_model_stats.json
stored_weights/m2/unet_ao/: best_model_stats.json
stored_weights/m3/unet_ao/: best_model.pt  best_model_stats.json
stored_weights/m3/unet_metallic/: best_model.pt  best_model_stats.json
stored_weights/m3/unet_parallax/: best_model.pt  best_model_stats.json
stored_weights/m3/unet_roughness/: best_model.pt  best_model_stats.json
stored_weights/p0/unet_ao/: best_model.pt  best_model_stats.json
stored_weights/p0/unet_parallax/: best_model.pt  best_model_stats.json
stored_weights/p1/unet_ao/: best_model.pt  best_model_stats.json
stored_weights/p1/unet_parallax/: best_model.pt  best_model_stats.json
stored_weights/p2/unet_ao/: best_model.pt  best_model_stats.json
stored_weights/p2/unet_parallax/: best_model.pt  best_model_stats.json
stored_weights/p3/unet_ao/: best_model.pt  best_model_stats.json
training_scripts/: augmentations.py  check_segformer.py  class_materials.py  curriculum_sampler.py  seed.py  segformer_6ch.py  segformer_check_gate.py  skyrim_dataset.py  skyrim_generate_mask.py  skyrim_photometric_aug.py  train_dataset.py  train_segformer.py  train_unet_albedo.py  train_unet_maps.py  train_unet_single_ch.py  train_unets.py  traint_unet_albedo.py  unet_models.py
(+29 files in other folders)
